--- a/frontend/src/Components/BookCard.css
+++ b/frontend/src/Components/BookCard.css
@@ -42,4 +42,10 @@
     margin-bottom: 4px;
     color: #444;
   }
+
+  #bookimg{          
+    object-fit: cover;       
+    border-radius: 8px;      
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  }
   
