--- a/frontend/src/Components/Header.css
+++ b/frontend/src/Components/Header.css
@@ -12,6 +12,10 @@
     box-shadow: 0 1px 4px rgba(146,161,176,.15);
     top: 0%;
 }
+.logo-nav{
+    display: flex;
+    align-items: center;
+}
 
 .logo-nav a{
     font-size: 20px;
