--- a/frontend/src/Components/Header.css
+++ b/frontend/src/Components/Header.css
@@ -12,10 +12,22 @@
     box-shadow: 0 1px 4px rgba(146,161,176,.15);
     top: 0%;
 }
-.logo-nav{
+
+.logo {
     display: flex;
     align-items: center;
-}
+    font-size: 20px;
+    color: rgb(233,83,75);
+    font-weight: 800;
+    margin-right: 20px;
+    text-decoration: none;
+  }
+
+  .logo-nav {
+    display: flex;
+    align-items: center;
+    gap: 20px; /* spacing between logo and nav items */
+  }
 
 .logo-nav a{
     font-size: 20px;
@@ -46,6 +58,21 @@
     list-style-type: none;
     margin-bottom: 15px!important;
 }
+
+.nav-left {
+    display: flex;
+    align-items: center;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    gap: 20px;
+  }
+  
+  .left-option {
+    display: flex;
+    align-items: center;
+    padding: 0 10px;
+  }  
 
 .nav-right{
     display: flex;
