--- a/frontend/src/Components/Roadmap.css
+++ b/frontend/src/Components/Roadmap.css
@@ -1,11 +1,14 @@
 .roadmap-page {
     max-width: 700px;
-    margin: 40px auto;
+    margin: 0px auto;
     padding: 30px;
+    padding-top: 100px;
     background-color: #fefefe;
     border-radius: 15px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    
+   
   }
   
   .roadmap-page h2 {
