--- a/frontend/src/Components/Header.css
+++ b/frontend/src/Components/Header.css
@@ -77,7 +77,7 @@
 .nav-right{
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
 }
   
 .option{
